changement type telephone

--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -48,10 +48,10 @@
                 {{ form_widget(form.campus) }}
             </div>
 
-            <div class="form-group row">
-                {{ form_label(form.photoFile) }}
-                {{ form_widget(form.photoFile) }}
-            </div>
+{#            <div class="form-group row">#}
+{#                {{ form_label(form.photoFile) }}#}
+{#                {{ form_widget(form.photoFile) }}#}
+{#            </div>#}
 
     {#A ne pas afficher#}
         <div>
