--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -126,7 +126,7 @@
                             {% endfor %}
                         {% endif %}
 
-                        {% if sortie.etat.libelle == "En création" %}
+                        {% if sortie.etat.libelle == "Crée" %}
                             <td><a href="{{ path('modification_sortie', {'id': sortie.id}) }}">Modifier</a> -
                                 <a href="">Publier</a>
                             </td>
@@ -139,7 +139,7 @@
                                     - <a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Annuler</a></td>
                                 {% endif %}
                             {% endfor %}
-                                - <a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">S'FFGDSFDSFDS</a></td>
+                                - <a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">S'inscrire</a></td>
                         {% endif %}
 
                         {#Si plus de place, alors la personne ne peut qu'afficher la sortie#}
