--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,6 +70,9 @@
         <div class="text-right">
             <h4>Date du jour : {{ "now"|date("d/m/Y") }}</h4>
             <h4>Participant : {{ app.user.prenom }} {{ app.user.nom|first }}.</h4>
+            {% for unrole in app.user.roles %}
+                <h4>Role : {{ unrole }}</h4>
+            {% endfor %}
         </div>
     {% endif %}
 </header>
