--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -112,34 +112,35 @@
                     {# Si il y a encore de la place dans l'activité alors ou peut s'inscrire si l'état le permet#}
                     {% if (app.user.roles != ["ROLE_USER"]) %}
 
-                        {% if sortie.etat.libelle == "En cours" %}
-                            <td><a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Afficher</a></td>
-                        {% endif %}
-
-                        {% if sortie.etat.libelle == "Fermé" %}
-                            <td><a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Afficher</a>
-                            {% for participant in inscriptions %}
-                                {% if (participant.user == app.user) and (participant.sortie == sortie) %}
-                                   - <a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Se désister</a>
-                                    </td>
-                                {% endif %}
-                            {% endfor %}
-                        {% endif %}
-
-                        {% if sortie.etat.libelle == "Créé" %}
+                        {% if sortie.etat.id == 1 %}
                             <td><a href="{{ path('modification_sortie', {'id': sortie.id}) }}">Modifier</a> -
                                 <a href="">Publier</a>
                             </td>
                         {% endif %}
 
-                        {% if (sortie.etat.libelle == "Ouvert") %}
+                        {% if sortie.etat.id == 2 %}
                             <td><a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Afficher</a>
                             {% for participant in inscriptions %}
-                                {% if (participant.user == app.user) and (participant.sortie == sortie) and (app.user.id == sortie.organisateur.id) %}
+                                {% if (participant.user != app.user) and (participant.sortie == sortie) %}
+                                    - <a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">S'inscrire</a></td>
+                                {% elseif (participant.user == app.user) and (participant.sortie == sortie) %}
                                     - <a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Annuler</a></td>
                                 {% endif %}
                             {% endfor %}
-                                - <a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">S'inscrire</a></td>
+                        {% endif %}
+
+                        {% if sortie.etat.id == 3 %}
+                            <td><a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Afficher</a>
+                            {% for participant in inscriptions %}
+                                {% if (participant.user == app.user) and (participant.sortie == sortie) %}
+                                    - <a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Se désister</a>
+                                    </td>
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+
+                        {% if sortie.etat.id == 4 %}
+                            <td><a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Afficher</a></td>
                         {% endif %}
 
                         {#Si plus de place, alors la personne ne peut qu'afficher la sortie#}
