--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -51,8 +51,8 @@
                     </div>
 
                     <div class="form-group row">
-                        {{ form_label(form.password) }}
-                        {{ form_widget(form.password) }}
+                        {{ form(form.plainPassword) }}
+                        {{ form_widget(form.plainPassword) }}
                     </div>
 
                     <!-- **confirmation password** -->
@@ -62,10 +62,10 @@
                         {{ form_widget(form.campus) }}
                     </div>
 
-                    <div class="form-group row">
-                        {{ form_label(form.photoFile) }}
-                        {{ form_widget(form.photoFile) }}
-                    </div>
+{#                    <div class="form-group row">#}
+{#                        {{ form_label(form.photoFile) }}#}
+{#                        {{ form_widget(form.photoFile) }}#}
+{#                    </div>#}
 
                     {#A ne pas afficher#}
                     <div>
@@ -73,10 +73,10 @@
                         {{ form_widget(form.roles) }}
                     </div>
 
-                    <div>
-                        <button type="submit" class="btn btn-primary">Enregistrer</button>
-                        <button type="reset" class="btn btn-primary">Annuler</button>
-                    </div>
+{#                    <div>#}
+{#                        <button type="submit" class="btn btn-primary">Enregistrer</button>#}
+{#                        <button type="reset" class="btn btn-primary">Annuler</button>#}
+{#                    </div>#}
 
                 </div>
             </div>
