--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -107,7 +107,7 @@
                     PARTIE ACTIONS
 
                      Si il y a encore de la place dans l'activité alors ou peut s'inscrire si l'état le permet
-                    {% if (app.user.roles != ["ROLE_USER"]) %}
+{#                    {% if (app.user.roles != ["ROLE_USER"]) %}#}
 
                         {% if sortie.etat.id == 1 %}
                             <td><a href="{{ path('modification_sortie', {'id': sortie.id}) }}">Modifier</a> -
@@ -141,11 +141,11 @@
                         {% endif %}
 
                         Si plus de place, alors la personne ne peut qu'afficher la sortie
-                    {% else %}
+{#                    {% else %}#}
 
-                        <td><a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Afficher</a></td>
+{#                        <td><a href="{{ path('affichage_sortie', {'id': sortie.id}) }}">Afficher</a></td>#}
 
-                    {% endif %}
+{#                    {% endif %}#}
 
                 </tr>
 
@@ -155,9 +155,9 @@
 
             <tfoot>
             <tr>
-                {% if app.user.roles == ["ROLE_ORGANISATEUR"] or app.user.roles == ["ROLE_ADMIN"] %}
+{#                {% if app.user.roles == ["ROLE_ORGANISATEUR"] or app.user.roles == ["ROLE_ADMIN"] %}#}
                     <td><a href="{{ path('creation_sortie') }}"><button type="submit" class="btn btn-primary mb-2">Créer une sortie</button></a></td>
-                {% endif %}
+{#                {% endif %}#}
             </tr>
             </tfoot>
 
