--- a/templates/compte/list.html.twig
+++ b/templates/compte/list.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ parent() }}{% endblock %}
 
 {% block main %}
-    <h2>Les utilisateurs</h2>
+    <h1 class="text-center">Les utilisateurs</h1>
 
     <section>
         {% for accounts in account %}
