--- a/templates/edit_account/edit.html.twig
+++ b/templates/edit_account/edit.html.twig
@@ -78,10 +78,10 @@
 {#                                {{ form_widget(form.roles) }}#}
 {#                            </div>#}
 {#                    {% endif %}#}
-{#                    <div>#}
-{#                        <button type="submit" class="btn btn-primary">Enregistrer</button>#}
-{#                        <button type="reset" class="btn btn-primary">Annuler</button>#}
-{#                    </div>#}
+                    <div>
+                        <button type="submit" class="btn btn-primary">Enregistrer</button>
+                        <button type="reset" class="btn btn-primary">Annuler</button>
+                    </div>
 
                 </div>
             </div>
