--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -23,18 +23,18 @@
                 <div class="form-group row">
                     <label for="inputRecherche" class="col-sm-5 col-form-label">Le nom de la sortie contient :</label>
                     <div class="col-sm-6">
-                        <input type="text" class="form-control" id="inputRecherche" placeholder="Recherche">
+                        <input type="text" class="form-control" id="inputRecherche" name="inputRecherche" placeholder="Recherche">
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label for="inputDateDebut" class="col-1 col-form-label">Entre :</label>
                     <div class="col-3">
-                        <input type="date" class="form-control" id="inputDateDebut">
+                        <input type="date" class="form-control" id="inputDateDebut" name="inputDateDebut">
                     </div>
                     <label for="inputDateFin" class="col-1 col-form-label">Et :</label>
                     <div class="col-3">
-                        <input type="date" class="form-control" id="inputDateFin">
+                        <input type="date" class="form-control" id="inputDateFin" name="inputDateFin">
                     </div>
                 </div>
 
