--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,40 +1,40 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseNoNav.html.twig' %}
 
 {% block title %}{{ parent() }} Se connecter!{% endblock %}
 
 {% block main %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            Vous êtes déjà connecté : {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+<div class="col-12 content-login">
 
-    <h1 class="h3 mb-3 font-weight-normal">Connectez-vous !</h1>
-    <label for="inputPseudo">Pseudo</label>
-    <input type="text" value="{{ last_username }}" name="pseudo" id="inputPseudo" class="form-control" required autofocus>
-    <label for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+    <form method="post">
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+        {% if app.user %}
+            <div class="mb-3">
+                Vous êtes déjà connecté : {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+            </div>
+        {% endif %}
 
-{#        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.#}
-{#        See https://symfony.com/doc/current/security/remember_me.html#}
+        <h1 class="text-center">Connectez-vous !</h1>
+        <div class="form-group row row-login">
+            <label for="inputPseudo" class="col-sm-4 col-form-label">Pseudo : </label>
+            <div class="col-sm-8"><input type="text" value="{{ last_username }}" name="pseudo" id="inputPseudo" class="form-control" required autofocus></div>
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Se rappeler de moi
-            </label>
+            <label for="inputPassword" class="col-sm-4 col-form-label">Mot de passe : </label>
+            <div class="col-sm-8"><input type="password" name="password" id="inputPassword" class="form-control" required></div>
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         </div>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Connexion
-    </button>
-</form>
+    {#        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.#}
+    {#        See https://symfony.com/doc/current/security/remember_me.html#}
+
+        <div class="inline-connexion text-center">
+            <button class="btn btn-violet" type="submit">Se connecter</button>
+            <div class="checkbox"><label><input type="checkbox" name="_remember_me"> Se rappeler de moi</label></div>
+        </div>
+
+    </form>
+</div>
 {% endblock %}
