--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,5 +1,5 @@
 /* couleur dominante : #4A00E0
-   couleur secondaire : #fc4a1a
+   couleur secondaire : #e36414
    couleur terciaire : white
  */
 
