--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 {#    <link rel="stylesheet" src="{{ asset('CSS/editAccount.css') }}">#}
     <!-- Css -->
-    <link rel="stylesheet" href="{{ asset('CSS/connexion.css') }}">
+    {% block accueilCss %}{% endblock %}
+    {% block connexionCss %}{% endblock %}
     <link rel="stylesheet" href="{{ asset('CSS/style.css') }}">
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
