--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -7,3 +7,71 @@ body{
     font-family: 'Montserrat', sans-serif;
     background: #4A00E0;  /* fallback for old browsers */
 }
+
+#wrapper {
+    overflow-x: hidden;
+}
+
+#sidebar-wrapper {
+    background-color: #4A00E0;
+    color: white;
+    min-height: 100vh;
+    margin-left: -15rem;
+    -webkit-transition: margin .25s ease-out;
+    -moz-transition: margin .25s ease-out;
+    -o-transition: margin .25s ease-out;
+    transition: margin .25s ease-out;
+}
+
+.sidebar-heading{
+    font-size: 32px;
+    font-weight: 700;
+    padding: 20px;
+}
+
+.navbar-nav{
+    display: inline-block;
+    width: 200px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#sidebar-wrapper a{
+    color: white;
+}
+
+#sidebar-wrapper li{
+    margin-bottom: 16px;
+}
+
+#sidebar-wrapper hr{
+    border-top: 1px solid rgba(255, 255, 255, 1);
+}
+
+#sidebar-wrapper .list-group {
+    width: 15rem;
+}
+
+#page-content-wrapper {
+    min-width: 100vw;
+    background-color: white;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
+}
+
+@media (min-width: 768px) {
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
+
+    #page-content-wrapper {
+        min-width: 0;
+        width: 100%;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        margin-left: -15rem;
+    }
+}
