--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
 {#    <link rel="stylesheet" src="{{ asset('CSS/editAccount.css') }}">#}
     <!-- Css -->
     {% block accueilCss %}{% endblock %}
+    {% block accueilCarouselCss %}{% endblock %}
     {% block connexionCss %}{% endblock %}
     <link rel="stylesheet" href="{{ asset('CSS/style.css') }}">
     <!-- Font -->
@@ -19,78 +20,105 @@
 </head>
 <body>
 
-<header>
-    <div class="logo">
-        <h1>Sortir.com</h1>
-        <img src="{{ asset('IMAGES/logo_test.jpg') }}" width="100px" height="100px" />
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="d-flex" id="wrapper">
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="#">Sortir.com</a>#}
-{#                    <img src="{{ asset('IMAGES/logo_test.jpg') }}" />#}
-{#                </li>#}
+    <!-- Sidebar -->
+    <div class="border-right d-none d-lg-block" id="sidebar-wrapper">
+        <div class="sidebar-heading text-center">SORTIR.COM</div>
+        <div class="list-group list-group-flush">
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     {% if app.user %}
-                        <li class="nav-item active">
-                            <a class="nav-link" href="{{ path('accueil') }}">Accueil <span class="sr-only">(current)</span></a>
-                        </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('accueil') }}">Accueil <span class="sr-only">(current)</span></a>
+                </li>
+                <hr>
                 <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_logout') }}" title="Disconnect">Se déconnecter</a>
-                        </li>
+                    <a class="nav-link" href="{{ path('app_logout') }}" title="Disconnect">Se déconnecter</a>
+                </li>
+                <hr>
                 {% if (is_granted("ROLE_ADMIN")) %}
                     <li class="nav-item">
-                            <a class="nav-link" href="{{ path('compte') }}">Tous les profils</a>
-                        </li>
+                        <a class="nav-link" href="{{ path('compte') }}">Tous les profils</a>
+                    </li>
+                    <hr>
                 {% else %}
                     <li class="nav-item">
-                            <a class="nav-link" href="{{ path('detail', {'id': app.user.id}) }}">Mon profil</a>
-                        </li>
+                        <a class="nav-link" href="{{ path('detail', {'id': app.user.id}) }}">Mon profil</a>
+                    </li>
+                    <hr>
                 {% endif %}
-            {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_register') }}" title="register">Enregistrer un utilisateur</a>
-                </li>
-                <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_login') }}" title="Connect">Se Connecter</a>
-                        </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_register') }}" title="register">Enregistrer un utilisateur</a>
+                    </li>
+                    <hr>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_login') }}" title="Connect">Se Connecter</a>
+                    </li>
+                    <hr>
                 {% endif %}
                 </li>
                 {% if (is_granted("ROLE_ADMIN")) %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('cities_villes') }}" title="ville">Ville</a>
                     </li>
+                    <hr>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('cities_campus') }}" title="campus">Campus</a>
                     </li>
                 {% endif %}
             </ul>
         </div>
-    </nav>
-    {% if app.user %}
-        <div class="text-right">
-            <h4>Date du jour : {{ "now"|date("d/m/Y") }}</h4>
-            <h4>Participant : {{ app.user.prenom }} {{ app.user.nom|first }}.</h4>
-            {% for unrole in app.user.roles %}
-                <h4>Role : {{ unrole }}</h4>
-            {% endfor %}
-        </div>
-    {% endif %}
-</header>
-
-<main>
-    <div class="box container-fluid">
-        {% block main %}{% endblock %}
     </div>
-</main>
+    <!-- /#sidebar-wrapper -->
 
-<footer></footer>
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+
+        <nav class="navbar navbar-expand-lg navbar-light border-bottom d-lg-none">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="container-fluid">
+            <main>
+                <div class="box container-fluid">
+                    {% block main %}{% endblock %}
+                </div>
+            </main>
+
+            <footer></footer>
+        </div>
+    </div>
+    <!-- /#page-content-wrapper -->
+
+</div>
+<!-- /#wrapper -->
 <!-- Optional JavaScript -->
 {% block javascripts %}{% endblock %}
 
